tests/rosetta/transpiler/Elixir/24-game-solve.error
run: exit status 1
** (SyntaxError) invalid syntax found on /workspace/mochi/tests/rosetta/transpiler/Elixir/24-game-solve.exs:3:11:
    error: syntax error before: "0"
    │
  3 │   @OP_NUM 0
    │           ^
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/24-game-solve.exs:3:11
    (elixir 1.18.3) lib/code.ex:1525: Code.require_file/2
